--- a/routes/templates/login.ejs
+++ b/routes/templates/login.ejs
@@ -6,16 +6,69 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <title>Personal Plate</title>
+    <style>
+      body {
+        margin: 0;
+        padding: 0;
+      }
+
+      main {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+
+        width: 100%;
+        height: 100%;
+
+        margin-top: 40%;
+      }
+
+      main fieldset {
+
+        width: min-content;
+        height: min-content;
+
+        display: table;
+        border-spacing: 5px;
+        border-collapse: separate;
+      }
+
+      main fieldset form div.input-group {
+        display: table-row;
+      }
+
+      main fieldset form div.input-group label, main fieldset form div.input-group input {
+        display: table-cell;
+      }
+
+      img {
+        align-self: center;
+        width: 100px;
+        height: 100px;
+      }
+    </style>
   </head>
   <body>
-    <form id="form" method="POST" action="/user/login/oauth?state=<%= params.state %>&redirect_uri=<%= params.redirect_uri %>">
-      <label for="login">Login: </label>
-      <input type="text" id="login" name="login" />
-      <br />
-      <label for="password">Password: </label>
-      <input type="password" id="password" name="password"/>
-      <br />
-      <button>Login</button>
-    </form>
+    <main>
+      <fieldset>
+        <img src="https://i.ibb.co/hM0gsmZ/logo.png" alt="">
+        <form
+          id="form"
+          method="POST"
+          action="/user/login/oauth?state=<%= params.state %>&redirect_uri=<%= params.redirect_uri %>"
+        >
+          <div class="input-group">
+            <label for="login">Login: </label>
+            <input type="text" id="login" name="login" />
+          </div>
+          <div class="input-group">
+            <label for="password">Password: </label>
+            <input type="password" id="password" name="password" />
+          </div>
+          <button>Login</button>
+        </form>
+      </fieldset>
+    </main>
   </body>
 </html>
